--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/helmet": "^0.0.44",
     "@types/multer": "^1.3.9",
     "@types/randomstring": "^1.1.6",
+    "awesome-phonenumber": "^2.52.0",
     "aws-sdk": "^2.514.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
@@ -36,6 +37,7 @@
     "helmet": "^3.20.0",
     "http": "^0.0.0",
     "jsonwebtoken": "^8.5.1",
+    "memory-cache": "^0.2.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.6.5",
