--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tslint": "^5.19.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.5.3",
-    "typescript-tslint-plugin": "^0.5.4"
+    "typescript-tslint-plugin": "^0.5.4",
+    "xlsx": "^0.17.0"
   },
   "dependencies": {
     "@types/helmet": "^0.0.44",
