--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "xlsx": "^0.17.0"
   },
   "dependencies": {
+    "@sentry/integrations": "^6.15.0",
+    "@sentry/node": "^6.15.0",
+    "@sentry/tracing": "^6.15.0",
     "@types/helmet": "^0.0.44",
     "@types/multer": "^1.3.9",
     "@types/randomstring": "^1.1.6",
