--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -3,7 +3,7 @@ name: Hanlight v1 Node CI/CD
 on:
   push:
     branches:
-      [master, develop]
+      [master, develop, feature/github-action]
 
 jobs:
   build:
@@ -13,11 +13,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Make envfile
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_SECRET_KEY: ${{ secrets.SECRET_ENV }}
-          directory: .
-          file_name: .env
+        run: echo -e "${{ secrets.SECRET_ENV }}" > .env
+        shell: bash
 
       - name: Make zip file
         run: zip -qq -r ./node-server.zip .
